k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xuyang-app
  namespace: xgao-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xuyang-app
  template:
    metadata:
      labels:
        app: xuyang-app
    spec:
      imagePullSecrets:
        - name: ghcr-login
      containers:
        - name: app
          image: ghcr.io/lookmail88/xuyang-app:v0.1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-config
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
      volumes:
        - name: app-config
          configMap:
            name: xuyang-app-config
